# Real-Time-Micro-Expression-Analyzer

./: .gitignore  BACKEND.md  Dockerfile  README.md  RUN_BACKEND.md  docker-compose.yml  download_data.py  pyproject.toml  requirements.txt  setup_env.ps1  setup_env.sh
.github/workflows/: test.yml
config/: config.yaml  default.yaml
data/processed/: unified_metadata.csv
data/splits/: test.csv  train.csv  val.csv
docs/: API.md  ARCHITECTURE.md  CONTRIBUTING.md  DEPLOYMENT.md
src/analysis/: session_analyzer.py
src/api/: app.py  middleware.py  schemas.py
src/api/routes/: analyze.py  health.py  stream.py
src/datasets/: dataloader_builder.py  emotion_dataset.py  transforms.py
src/evaluation/: classification_report.py  confusion_matrix_plot.py  evaluator.py  metrics.py
src/inference/: dashboard.py  dashboard_app.py  face_landmark_detector.py  feature_engineering.py  realtime_analyzer.py  stress_model.py
src/models/: cnn_emotion_model.py  model_factory.py
src/preprocessing/: dataset_unifier.py  download_data.py  image_preprocessor.py  label_mapper.py
src/training/: loss_functions.py  optimizer_builder.py  scheduler_builder.py  train.py  trainer.py
src/utils/: config.py  data_logger.py  database.py  exceptions.py  landmark_recorder.py  logger.py  privacy.py  signal_processing.py
tests/: conftest.py  test_api.py  test_database.py  test_feature_engineering.py  test_label_mapper.py  test_signal_processing.py  test_stress_model.py
