[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "micro-expression-analyzer"
version = "0.1.0"
description = "Real-time micro-expression and stress analysis"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.112.2",
    "httpx==0.27.0",
    "jupyter==1.0.0",
    "kaggle==1.6.17",
    "matplotlib==3.9.2",
    "mediapipe==0.10.18",
    "numpy==1.26.4",
    "opencv-python==4.10.0.84",
    "pandas==2.2.3",
    "pillow==10.4.0",
    "pydantic==2.8.2",
    "pytest==8.3.2",
    "python-dotenv==1.0.1",
    "python-multipart==0.0.9",
    "pyyaml==6.0.2",
    "scikit-learn==1.5.2",
    "seaborn==0.13.2",
    "streamlit==1.38.0",
    "torch==2.4.1",
    "torchvision==0.19.1",
    "tqdm==4.66.5",
    "uvicorn==0.30.6",
]

[project.scripts]
mea-analyze = "src.inference.realtime_analyzer:main"
mea-server = "src.api.app:main"
mea-download = "src.preprocessing.download_data:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
